fix spacing

--- a/frontend/src/components/BackLink/index.module.scss
+++ b/frontend/src/components/BackLink/index.module.scss
@@ -1,5 +1,5 @@
 .buttonWrapper {
-  margin: 24px 0 76px;
+  margin: 24px 0;
 }
 
 .button {
