--- a/frontend/src/components/LayoutWithBackground/index.module.scss
+++ b/frontend/src/components/LayoutWithBackground/index.module.scss
@@ -1,7 +1,6 @@
 .svgWrapperTop {
   display: flex;
   justify-content: flex-start;
-  margin-bottom: 40px;
 
   > svg {
     max-width: 330px;
